# wxWidgets

./: .gitignore  CMakeLists.txt  MyApp.cpp  MyApp.h  MyProject.cpp  MyProject.fbp  MyProject.h  MyProjectBase.cpp  MyProjectBase.h  application.cpp  application.h
samples/: CMakeLists.txt  layout_vc9.sln  samples_v15.sln  upgrade_vs2017.bat
samples/access/: access_vc9.vcxproj  access_vc9.vcxproj.filters
samples/animate/: anitest_vc9.vcxproj  anitest_vc9.vcxproj.filters
samples/archive/: archive_vc9.vcxproj  archive_vc9.vcxproj.filters
samples/artprov/: artprov_vc9.vcxproj  artprov_vc9.vcxproj.filters
samples/aui/: auidemo_vc9.vcxproj  auidemo_vc9.vcxproj.filters
samples/calendar/: calendar_vc9.vcxproj  calendar_vc9.vcxproj.filters
samples/caret/: caret_vc9.vcxproj  caret_vc9.vcxproj.filters
samples/clipboard/: clipboard_vc9.vcxproj  clipboard_vc9.vcxproj.filters
samples/collpane/: collpane_vc9.vcxproj  collpane_vc9.vcxproj.filters
samples/combo/: combo_vc9.vcxproj  combo_vc9.vcxproj.filters
samples/config/: config_vc9.vcxproj  config_vc9.vcxproj.filters
samples/console/: console_vc9.vcxproj  console_vc9.vcxproj.filters
samples/dataview/: dataview_vc9.vcxproj  dataview_vc9.vcxproj.filters
samples/debugrpt/: debugrpt_vc9.vcxproj  debugrpt_vc9.vcxproj.filters
samples/dialogs/: dialogs_vc9.vcxproj  dialogs_vc9.vcxproj.filters
samples/dialup/: dialup_vc9.vcxproj  dialup_vc9.vcxproj.filters
samples/display/: display_vc9.vcxproj  display_vc9.vcxproj.filters
samples/dll/: dll_vc9_my_dll.vcxproj  dll_vc9_my_dll.vcxproj.filters  dll_vc9_sdk_exe.vcxproj  dll_vc9_sdk_exe.vcxproj.filters  dll_vc9_wx_exe.vcxproj  dll_vc9_wx_exe.vcxproj.filters
samples/dnd/: dnd_vc9.vcxproj  dnd_vc9.vcxproj.filters
samples/docview/: docview_vc9.vcxproj  docview_vc9.vcxproj.filters
(+296 files in other folders)
